Added more time slot options to CfP

--- a/templates/cfp_form.html
+++ b/templates/cfp_form.html
@@ -104,6 +104,12 @@
                     {{ _('Poster') }}
                 </label>
             </div>
+            <div class="radio">
+                <label>
+                    <input type="radio" name="entry.1191148942" value="Hardware Projects Showcase" required>
+                    {{ _('Hardware Projects Showcase') }}
+                </label>
+            </div>
         </div>
     </fieldset>
 
@@ -145,8 +151,26 @@
             </div>
             <div class="radio">
                 <label>
-                    <input type="radio" name="entry.1403279435" value="45 minutes (talks)" required>
-                    {{ _('45 minutes (talks)') }}
+                    <input type="radio" name="entry.1403279435" value="45 minutes (talks/workshops)" required>
+                    {{ _('45 minutes (talks/workshops)') }}
+                </label>
+            </div>
+            <div class="radio">
+                <label>
+                    <input type="radio" name="entry.1403279435" value="60 minutes (workshops/Hardware Projects Showcase)" required>
+                    {{ _('60 minutes (workshops/Hardware Projects Showcase)') }}
+                </label>
+            </div>
+            <div class="radio">
+                <label>
+                    <input type="radio" name="entry.1403279435" value="90 minutes (workshops)" required>
+                    {{ _('90 minutes (workshops)') }}
+                </label>
+            </div>
+            <div class="radio">
+                <label>
+                    <input type="radio" name="entry.1403279435" value="120 minutes (workshops)" required>
+                    {{ _('120 minutes (workshops)') }}
                 </label>
             </div>
             <div class="radio">
