--- a/templates/edusummit.html
+++ b/templates/edusummit.html
@@ -9,9 +9,15 @@
         <h1 class="featurette-heading">{{ _('EduSummit') }}</h1>
         <p class="lead">{{ _('Where Teachers meet Programmers') }}</p>
 
-        <p>{{ _('EduSummit is a special section of the conference focused on teaching programming at primary and secondary schools. After two years of having an EduTrack at PyCon SK, consisting of a single day of talks for teachers, we are now organising a two day summit during which teachers will be introduced to innovative ways and methods of teaching programming, share their knowledge of useful tools and last but not least participate in numerous workshops given by experienced educators. This year’s keynote speaker will be Juraj Hromkovič, a professor at ETH Zürich, whose main focus of work is education for teachers of Computer Science.
+        <p>{{ _('EduSummit is a special section of the conference focused on teaching programming at primary and secondary schools. After two years of having an EduTrack at PyCon SK, consisting of a single day of talks for teachers, we are now organising a two day summit during which teachers will be introduced to innovative ways and methods of teaching programming, share their knowledge of useful tools and last but not least participate in numerous workshops given by experienced educators.
 ') }}</p>
 
+        <p>{{ _('This year’s keynote speaker will be Juraj Hromkovič, a professor at ETH Zürich, whose main focus of work is education for teachers of Computer Science.') }}</p>
+
+        <img src="http://www.abz.inf.ethz.ch/abz-presse/juraj-hromkovic/pictures/picture-1.jpg" width="50%"></img>
+        
+        <p class="small">{{ _('Profesor Juraj Hromkovič, DrSc.') }}</p>
+        
         <p>{{ _('Please note that EduSummit will be primarily in Slovak language.') }}</p>
 
         <hr>
