--- a/templates/cfp_form.html
+++ b/templates/cfp_form.html
@@ -6,12 +6,22 @@
 {% endblock %}
 
 {% block content %}
-<div class="container marketing">
+    <div id="page-banner-area" class="page-banner-area" style="background-image:url({{ url_for('static', filename='images/banner/banner3.jpg') }})">
+		<!-- Subpage title start -->
+		<div class="page-banner-title">
+      <div class="text-center">
+        <h2>{{ _('Call for proposals') }}</h2>
+      </div>
+    </div><!-- Subpage title end -->
+	</div><!-- Page Banner end -->
 
-  <div class="row featurette">
+  <section id="main-container" class="main-container">
+
+<div class="container">
+
+  <div class="row">
     <div class="col-md-12">
 
-      <h1 class="featurette-heading">{{ _('Call for proposals') }}</h1>
       <p class="lead"><strong>{{ _('The Call For Proposals is open!') }}</strong></p>
 
       <form action="https://docs.google.com/forms/d/e/1FAIpQLSdzKJ7FAYDfAYFZEeNrs2rQMYMM_FDFOcu1tgvIQO-kzLczuA/formResponse"
@@ -272,4 +282,5 @@
   </div>
 
 </div>
+  </section>
 {% endblock %}
