--- a/templates/cfv.html
+++ b/templates/cfv.html
@@ -6,12 +6,22 @@
 {% endblock %}
 
 {% block content %}
-<div class="container marketing">
+  <div id="page-banner-area" class="page-banner-area" style="background-image:url({{ url_for('static', filename='images/banner/banner3.jpg') }})">
+		<!-- Subpage title start -->
+		<div class="page-banner-title">
+      <div class="text-center">
+        <h2>{{ _('Call for volunteers') }}</h2>
+      </div>
+    </div><!-- Subpage title end -->
+	</div><!-- Page Banner end -->
 
-  <div class="row featurette">
+  <section id="main-container" class="main-container">
+
+<div class="container">
+
+  <div class="row">
     <div class="col-md-12">
 
-      <h1 class="featurette-heading">{{ _('Call for volunteers') }}</h1>
       <p class="lead"><strong>{{ _('We need you to help organize PyCon SK 2019!') }}</strong></p>
 
       <p class="text-justify">
@@ -112,4 +122,5 @@
   </div>
 
 </div>
+  </section>
 {% endblock %}
