--- a/templates/privacy-policy.html
+++ b/templates/privacy-policy.html
@@ -1,12 +1,17 @@
 {% extends "body.html" %}
 {% block content %}
-  <div class="container marketing">
+  <div id="page-banner-area" class="page-banner-area" style="background-image:url({{ url_for('static', filename='images/banner/banner2.jpg') }})">
+		<!-- Subpage title start -->
+		<div class="page-banner-title">
+        	<div class="text-center">
+	        	<h2>{{ _('Privacy Policy') }}</h2>
+         </div>
+      </div><!-- Subpage title end -->
+	</div><!-- Page Banner end -->
 
-    <div class="row featurette">
-      <div class="col-md-12">
-        <h1 class="featurette-heading">{{ _('Privacy Policy') }}</h1>
-      </div>
-    </div>
+	<section id="main-container" class="main-container">
+
+  <div class="container">
 
     <div class="row featurette">
       <div class="col-md-12">
@@ -97,4 +102,5 @@
     </div>
 
   </div>
+  </section>
 {% endblock %}
