--- a/templates/thanks.html
+++ b/templates/thanks.html
@@ -1,11 +1,20 @@
 {% extends "body.html" %}
 {% block content %}
-<div class="container marketing">
+  <div id="page-banner-area" class="page-banner-area" style="background-image:url({{ url_for('static', filename='images/banner/banner2.jpg') }})">
+		<!-- Subpage title start -->
+		<div class="page-banner-title">
+        	<div class="text-center">
+	        	<h2>{{ _('Thank you') }}</h2>
+         </div>
+      </div><!-- Subpage title end -->
+	</div><!-- Page Banner end -->
 
-  <div class="row featurette">
+	<section id="main-container" class="main-container">
+
+<div class="container">
+
+  <div class="row">
     <div class="col-md-12">
-
-      <h1 class="featurette-heading">{{ _('Thank you') }}</h1>
 
       <p class="text-justify">
         {{ _('We\'ll get in touch as soon as possible.') }}
@@ -15,4 +24,5 @@
   </div>
 
 </div>
+  </section>
 {% endblock %}
