--- a/templates/tickets.html
+++ b/templates/tickets.html
@@ -6,13 +6,27 @@
 {% endblock %}
 
 {% block content %}
-  <div class="container marketing">
+  <div id="page-banner-area" class="page-banner-area" style="background-image:url({{ url_for('static', filename='images/banner/banner2.jpg') }})">
+		<!-- Subpage title start -->
+		<div class="page-banner-title">
+        	<div class="text-center">
+	        	<h2>{{ _('Tickets') }}</h2>
+         </div>
+      </div><!-- Subpage title end -->
+	</div><!-- Page Banner end -->
 
-    <div class="row featurette">
+	<section id="main-container" class="main-container">
+		<div class="container">
+			<div class="row text-center">
+				<span class="icon-wrap"><i class="fa fa-ticket"></i></span>
+				<h2 class="section-title">{{ _('Tickets') }}</h2>
+				<p class="section-sub-title">{{ _('Buy your ticket before they are gone... So far every PyCon SK has been sold out!') }}</p>
+			</div><!--/ Title row end -->
+
+
+
+    <div class="row">
       <div class="col-md-12">
-
-        <h1 class="featurette-heading">{{ _('Tickets') }}</h1>
-        <p class="lead">{{ _('Buy your ticket before they are gone... So far every PyCon SK has been sold out!') }}</p>
 
         <tito-widget event="pyconsk/2019"></tito-widget>
         <p>{{ _('You can also buy tickets directly on the <a href="https://ti.to/pyconsk/2019" target="_blank">https://ti.to/pyconsk/2019</a> website in case the tito widget is not displayed correctly.') }}</p>
@@ -22,15 +36,15 @@
         <hr>
 
         <div class="row featurette">
-          <div class="col-md-8 order-md-2">
+          <div class="col-md-4">
+            <img class="featurette-image img-fluid mx-auto" src="{{ url_for('static', filename='pyconsk/img/speaker_640x480.jpg') }}" srcset="{{ url_for('static', filename='pyconsk/img/speaker_320x240.jpg') }} 320w, {{ url_for('static', filename='pyconsk/img/speaker_160x120.jpg') }} 160w" alt="">
+          </div>
+          <div class="col-md-8">
             <h2>{{ _('Speakers and Lecturers') }}</h2>
             <p class="lead">{{ _('Our speakers are the best. And they do it for free! However, we have to pay for their
               conference ticket and sometimes we cover the travel budget.') }}</p>
             <p>{{ _('Expenses for flight tickets and hotel in Bratislava are a big part of our budget. We also do cover all
               the costs of recording and releasing the all of the talks.') }}</p>
-          </div>
-          <div class="col-md-4 order-md-1">
-            <img class="featurette-image img-fluid mx-auto" src="{{ url_for('static', filename='pyconsk/img/speaker_640x480.jpg') }}" srcset="{{ url_for('static', filename='pyconsk/img/speaker_320x240.jpg') }} 320w, {{ url_for('static', filename='pyconsk/img/speaker_160x120.jpg') }} 160w" alt="">
           </div>
         </div>
 
@@ -54,14 +68,14 @@
         <hr>
 
         <div class="row featurette">
-          <div class="col-md-8 order-md-2">
+          <div class="col-md-4">
+            <img class="featurette-image img-fluid mx-auto" src="{{ url_for('static', filename='pyconsk/img/tshirts_640x480.jpg') }}" srcset="{{ url_for('static', filename='pyconsk/img/tshirts_320x240.jpg') }} 320w, {{ url_for('static', filename='pyconsk/img/tshirts_160x120.jpg') }} 160w" alt="">
+          </div>
+          <div class="col-md-8">
             <h2>{{ _('Conference T-shirt and other swag') }}</h2>
             <p class="lead">{{ _('What kind of conference would PyCon Slovakia be without a conference T-shirt?') }}</p>
             <p>{{ _('Each attendee receives one 100&#37; cotton T-shirt and other swag. Possibly a water bottle with our fancy
               PyCon Slovakia logo. We would love to hear your ideas...') }}</p>
-          </div>
-          <div class="col-md-4 order-md-1">
-            <img class="featurette-image img-fluid mx-auto" src="{{ url_for('static', filename='pyconsk/img/tshirts_640x480.jpg') }}" srcset="{{ url_for('static', filename='pyconsk/img/tshirts_320x240.jpg') }} 320w, {{ url_for('static', filename='pyconsk/img/tshirts_160x120.jpg') }} 160w" alt="">
           </div>
         </div>
 
@@ -83,15 +97,15 @@
         <hr>
 
         <div class="row featurette">
-          <div class="col-md-8 order-md-2">
+          <div class="col-md-4">
+            <img class="featurette-image img-fluid mx-auto" src="{{ url_for('static', filename='pyconsk/img/refreshments_640x480.jpg') }}" srcset="{{ url_for('static', filename='pyconsk/img/refreshments_320x240.jpg') }} 320w, {{ url_for('static', filename='pyconsk/img/refreshments_160x120.jpg') }} 160w" alt="">
+          </div>
+          <div class="col-md-8">
             <h2>{{ _('Refreshments') }}</h2>
             <p class="lead">{{ _('Afraid of falling asleep during a talk? Don\'t worry, we have your back - All you can drink
               coffee, tea and water.') }}</p>
             <p>{{ _('We will have two proffesional baristas serving fresh coffee and tea all day long. Water fountains will be
               available on multiple spots in the lobby.') }}</p>
-          </div>
-          <div class="col-md-4 order-md-1">
-            <img class="featurette-image img-fluid mx-auto" src="{{ url_for('static', filename='pyconsk/img/refreshments_640x480.jpg') }}" srcset="{{ url_for('static', filename='pyconsk/img/refreshments_320x240.jpg') }} 320w, {{ url_for('static', filename='pyconsk/img/refreshments_160x120.jpg') }} 160w" alt="">
           </div>
         </div>
 
@@ -113,7 +127,10 @@
         <hr>
 
         <div class="row featurette">
-          <div class="col-md-8 order-md-2">
+          <div class="col-md-4">
+            <img class="featurette-image img-fluid mx-auto" src="{{ url_for('static', filename='pyconsk/img/real_conference_640x480.jpg') }}" srcset="{{ url_for('static', filename='pyconsk/img/real_conference_320x240.jpg') }} 320w, {{ url_for('static', filename='pyconsk/img/real_conference_160x120.jpg') }} 160w" alt="">
+          </div>
+          <div class="col-md-8">
             <h2>{{ _('Real Conference Ticket Price') }}</h2>
             <p class="lead">{{ _('The real price of one conference ticket would be much higher had it not been for our
               sponsors and partners, thanks to which we can afford to sell cheaper tickets.') }}</p>
@@ -121,9 +138,7 @@
               tickets) and this price still does not include the enormous amount of volunteer work, which is done by the
               Python commnity before and during each PyCon.') }}</p>
           </div>
-          <div class="col-md-4 order-md-1">
-            <img class="featurette-image img-fluid mx-auto" src="{{ url_for('static', filename='pyconsk/img/real_conference_640x480.jpg') }}" srcset="{{ url_for('static', filename='pyconsk/img/real_conference_320x240.jpg') }} 320w, {{ url_for('static', filename='pyconsk/img/real_conference_160x120.jpg') }} 160w" alt="">
-          </div>
+
         </div>
 
         <hr>
@@ -154,4 +169,5 @@
       </div>
     </div>
   </div>
+  </section>
 {% endblock %}
