--- a/templates/venue.html
+++ b/templates/venue.html
@@ -18,7 +18,9 @@
 
       <h2>{{ _('Travelling to Bratislava') }}</h2>
       <p class="text-justify">
-        {{ _('Bratislava is one of the youngest major cities in Europe. Nevertheless, it has a rich history of a free royal coronation town. At that time, it was still called the Pressburg (Prešpork). Today, Bratislava is a major transport hub in Central Europe, and there are plenty of possibilities of getting here.') }}
+        {{ _('Bratislava is one of the youngest capitals in Europe, and also one of the smallest. Despite this, it has a rich history of a free royal coronation town of Pressburg and '
+              'multiple opportunities how to spend time there. Bratislava has unique location, it is the only capital int he world located on the border of three countries.'
+              'Today, Bratislava is a major transport hub in Central Europe, and there are plenty possibilities of getting here.') }}
       </p>
 
       <div class="row">
@@ -26,20 +28,37 @@
         <div class="col-md-6">
           <h3>{{ _('By air') }}</h3>
           <p class="text-justify">
-            {{ _('If you are travelling to Bratislava, you can fly to the Bratislava airport (airport code: BTS) or the Vienna airport (airport code: VIE). The selection of flights to Vienna is better than to Bratislava.') }}
+            {{ _('If you are travelling to Bratislava, you can fly to the Bratislava airport (airport code: BTS) or the Vienna airport (airport code: VIE). '
+                 'Vienna airport has considerably better offer of flights.') }}
           </p>
           <p class="text-justify">
-            {{ _('There are shuttle buses running between Bratislava and Vienna airport every hour and they are relatively cheap (the bus ride costs about EUR 8 one way, if you book in advance it can got much cheaper). There are three bus companies operating airport shuttles between Vienna airport and Bratislava: SlovakLines (red buses), Blaguss (silver buses) and RegioJet (Yellow busses).') }}
+            {{ _('From Bratislava airport you can take taxi (use the phone, it''s cheaper), or take the bus #61 and then move to bus #39 at the Bajkalska station. '
+                 'Get off the bus at the station ZOO and simply follow the PyCon stickers up to the hill to univerrsity campus.') }}
           </p>
+          <p class="text-justify">
+            {{ _('If you travel through Vienna airport, there are direct and cheap bus connections from early morning till midnight. One way ticket costs about 8 EUR '
+                    'and if you buy in advance, the ticket may be considerably cheaper. There are three airport shuttle buses between Vienna airport and Bratislava: '
+                    'SlovakLines (red buses), Blaguss (silver buses) and RegioJet (Yellow busses).') }}
+          </p>
+
         </div>
         <div class="col-md-6">
           <h3>{{ _('By car') }}</h3>
           <p class="text-justify">
           <ul>
-            <li>{{ _('From Vienna, take highway A4, heading to Schwechat airport, when possible take the exit that leads to highway A6, which heads towards Bratislava.') }}</li>
-            <li>{{ _('From Budapest, take highway M1 heading to Gyor, follow this route until you see signs for highway M15 headed to Slovakia and Bratislava.') }}</li>
-            <li>{{ _('From Prague, take highway D1 to Brno, once in Brno take highway D2 heading to Slovakia and Bratislava.') }}</li>
-            <li>{{ _('From Warsaw, take highway A1 heading to Katowice. From there follow the road for Čadca, Slovakia. Take this road all the way to Žilina, then switch to highway D1 to Bratislava.') }}</li>
+            <li>{{ _('Arriving from Vienna, choose the direction Schwechat on A4 highway, then turn to highway A6 leading to Bratislava.
+            After crossing the border you will soon enter Bratislava, then follow the direction Praha/Brno. Right after crossing
+            the river of Danube leave the highway and follow the road along the highway. After several hundreds of meters you will
+            get to the crossroad where you should turn left and cross the highway you have left a minute ago. After the bridge there is another
+            crossroad where you turn right and immediately turn slightly left up the hill towards the university campus.') }}
+            <li>{{ _('From Budapest, take the highway M1 heading to Gyor, follow this route until you see signs for highway M15 heading to Slovakia and Bratislava.
+            After crossing the border follow the direction Praha or Brno according to instructions above.') }}</li>
+            <li>{{ _('If you drive from Prague, take the highway D1 to Brno, once in Brno take the highway D2 heading to Slovakia and Bratislava.
+            After arriving to Bratislava follow the highway and leave it at the exit Mlynska dolina after passing the tunnel.
+            Be cautious, the exit is located right after the tunnel, so you should stay in right lane while in tunnel.') }}</li>
+            <li>{{ _('From eastern and southern Poland choose your way to Katowice. From there follow the road to Cadca, Slovakia.
+            Follow the road all the way to Zilina, then switch to the highway D1 to Bratislava. After arriving to Bratislava,
+            you should pass the river of Danube twice following the direction Praha/Brno, then leave the highway following the instructions above.') }}</li>
           </ul>
           </p>
         </div>
@@ -49,7 +68,10 @@
             {{ _('All neighbouring capital cities Vienna, Prague, Budapest, Warsaw and Kiev have direct bus connections.') }}
           </p>
           <p class="text-justify">
-            {{ _('Once you arrive at the Bratislava bus station (Mlynské Nivy), you\'ll need to walk through the terminal towards its main entrance. Take a left and walk about 70 meters towards a busy street. Do not cross the street. There will be public transportation bus stops immediately on your right hand side.') }}
+            {{ _('Most of the buses will bring you to the main bus station - Mlynske Nivy. It is currently located in temporary location, so don''t
+            worry and keep calm if you arrive feeling like on construction site. Leave the area towards the blue oval building VUB
+            (next to the building with BMW logo) where you find the station of city bus lines. We recommend you to take bus number
+            70 to the end station Most SNP (SNP bridge) and from there continue with line number 30 or 37 to the station ZOO.') }}
           </p>
         </div>
         <div class="col-md-6">
@@ -58,7 +80,10 @@
             {{ _('All neighboring capital cities Vienna, Prague, Budapest, Warsaw and Kiev have direct train connections.') }}
           </p>
           <p class="text-justify">
-            {{ _('Once you arrive at the Bratislava train station (Bratislava hlavná stanica), you\'ll need to walk through the terminal towards its main entrance. Directly in front of the main entrance you\'ll find all your public transportation options on your right hand side.') }}
+            {{ _('Once you arrive at the Bratislava train station (Bratislava hlavná stanica), leave the station through the main entrance.
+            In front of the building, there are bus and tram stops. We recommend zou to take the bus number 32 to the station ZOO.
+            If you plan to use city lines more often, we recommend you to check the website https://imhd.sk/ba/ for more information
+            about the prices or the lines.') }}
           </p>
         </div>
 
