updated slovak translation

--- a/templates/venue.html
+++ b/templates/venue.html
@@ -36,7 +36,7 @@
                  'Get off the bus at the station ZOO and simply follow the PyCon stickers up to the hill to univerrsity campus.') }}
           </p>
           <p class="text-justify">
-            {{ _('If you travel through Vienna airport, there are direct and cheap bus connections from early morning till midnight. One way ticket costs about 8 EUR '
+            {{ _('If you travel via Vienna airport, there are direct and cheap bus connections from early morning till midnight. One way ticket costs about 8 EUR '
                     'and if you buy in advance, the ticket may be considerably cheaper. There are three airport shuttle buses between Vienna airport and Bratislava: '
                     'SlovakLines (red buses), Blaguss (silver buses) and RegioJet (Yellow busses).') }}
           </p>
