--- a/templates/body.html
+++ b/templates/body.html
@@ -184,14 +184,11 @@
               <p>{{  _('Please select all the ways you would like to hear from SPy o.z.:') }}</p>
 
               <fieldset class="mc_fieldset gdprRequired mc-field-group" name="interestgroup_field">
-                <div class="form-check">
                   <input type="checkbox" id="gdpr_26045" name="gdpr[26045]" value="Y" class="form-check-input">
                   <label class="form-check-label" for="gdpr_26045">{{ _('Email') }}</label>
-                </div>
-                <div class="form-check">
+                  &nbsp;
                   <input type="checkbox" id="gdpr_26049" name="gdpr[26049]" value="Y" class="form-check-input">
                   <label class="form-check-label" for="gdpr_26049">{{ _('Direct Mail') }}</label>
-                </div>
               </fieldset>
 
               <p>{{ _('You can unsubscribe at any time by clicking the link in the footer of our emails.') }}
