--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -1,11 +1,11 @@
 {% extends "body.html" %}
 
 {% block content %}
-  <div id="page-banner-area" class="page-banner-area" style="background-image:url({{ url_for('static', filename='images/banner/banner3.jpg') }})">
+  <div class="page-banner-area banner5">
 		<!-- Subpage title start -->
 		<div class="page-banner-title">
       <div class="text-center">
-        <h2>{{ _('Schedule') }}</h2>
+        <h1>{{ _('Schedule') }}</h1>
       </div>
     </div><!-- Subpage title end -->
 	</div><!-- Page Banner end -->
@@ -16,7 +16,7 @@
         <div class="col-md-12">
 
           <div class="card">
-            <h3 class="card-header">{{ _('What\'s on when (more details to be confirmed) ') }}</h3>
+            <h2 class="card-header">{{ _('What\'s on when (more details to be confirmed) ') }}</h2>
             <div class="card-body">
               <p class="card-text">
                 <table class="table table-bordered">
