--- a/static/css/style.css
+++ b/static/css/style.css
@@ -614,7 +614,7 @@ a[href^=tel] {
 /* Header transparent */
 
 .header.header-transparent{
-	background: none;
+	background: rgba(0, 0, 0, 0.8);
 	box-shadow: none;
 	position: absolute;
 	width: 100%;
@@ -636,7 +636,7 @@ a[href^=tel] {
 }
 
 .header.header-transparent .dropdown-menu li a{
-	color: #999;
+	color: #fff;
 	border-bottom: 1px solid #393939;
 }
 
@@ -655,7 +655,7 @@ a[href^=tel] {
 /*-- Logo --*/
 
 .logo {
-	padding: 17px 0;
+	padding: 10px 0;
 }
 
 /* Main navigation */
@@ -743,7 +743,7 @@ ul.navbar-nav > li > a{
 	 text-transform: uppercase;
 	 font-size: 14px;
 	 margin: 0;
-	 line-height: 40px;
+	 /*line-height: 40px;*/
 	 padding: 30px 0;
 	 -webkit-transition: 350ms;
 		-moz-transition: 350ms;
@@ -2575,6 +2575,17 @@ h4.panel-title a.collapsed:before {
     -webkit-backface-visibility: hidden;
 }
 
+.page-banner-area:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: #000;
+    opacity: 0.25;
+}
+
 .page-banner-title {
     position: absolute;
     top: 50%;
@@ -2582,9 +2593,8 @@ h4.panel-title a.collapsed:before {
     height: 100%;
 }
 
-.page-banner-title h2{
+.page-banner-title h1, .page-banner-title h2 {
 	color: #fff;
-	font-size: 30px;
 }
 
 .page-banner-title .breadcrumb{
@@ -2611,6 +2621,9 @@ h4.panel-title a.collapsed:before {
 	font-weight: 400;
 }
 
+.banner5 {
+	background-image:url('../images/banner/banner5.jpg');
+}
 
 /*-- About us page --*/
 
