--- a/templates/coc.html
+++ b/templates/coc.html
@@ -1,10 +1,10 @@
 {% extends "body.html" %}
 {% block content %}
-<div id="page-banner-area" class="page-banner-area" style="background-image:url({{ url_for('static', filename='images/banner/banner3.jpg') }})">
+<div class="page-banner-area banner6">
 		<!-- Subpage title start -->
 		<div class="page-banner-title">
       <div class="text-center">
-        <h2>{{ _('Code of Conduct') }}</h2>
+        <h1>{{ _('Code of Conduct') }}</h1>
       </div>
     </div><!-- Subpage title end -->
 	</div><!-- Page Banner end -->
