--- a/templates/edusummit.html
+++ b/templates/edusummit.html
@@ -1,11 +1,11 @@
 {% extends "body.html" %}
 
 {% block content %}
-  <div id="page-banner-area" class="page-banner-area" style="background-image:url({{ url_for('static', filename='images/banner/banner2.jpg') }})">
+  <div class="page-banner-area banner8">
 		<!-- Subpage title start -->
 		<div class="page-banner-title">
       <div class="text-center">
-        <h2>{{ _('EduSummit') }}</h2>
+        <h1>{{ _('EduSummit') }}</h1>
       </div>
     </div><!-- Subpage title end -->
 	</div><!-- Page Banner end -->
