--- a/templates/tickets.html
+++ b/templates/tickets.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content %}
-  <div id="page-banner-area" class="page-banner-area" style="background-image:url({{ url_for('static', filename='images/banner/banner2.jpg') }})">
+  <div class="page-banner-area banner11">
 		<!-- Subpage title start -->
 		<div class="page-banner-title">
         	<div class="text-center">
