--- a/templates/venue.html
+++ b/templates/venue.html
@@ -31,11 +31,11 @@
 {% endblock %}
 
 {% block content %}
-  <div id="page-banner-area" class="page-banner-area" style="background-image:url({{ url_for('static', filename='images/banner/banner2.jpg') }})">
+  <div class="page-banner-area banner10">
 		<!-- Subpage title start -->
 		<div class="page-banner-title">
         	<div class="text-center">
-	        	<h2>{{ _('Venue') }}</h2>
+	        	<h1>{{ _('Venue') }}</h1>
          </div>
       </div><!-- Subpage title end -->
 	</div><!-- Page Banner end -->
