--- a/templates/cfv.html
+++ b/templates/cfv.html
@@ -6,11 +6,11 @@
 {% endblock %}
 
 {% block content %}
-  <div id="page-banner-area" class="page-banner-area" style="background-image:url({{ url_for('static', filename='images/banner/banner3.jpg') }})">
+  <div class="page-banner-area banner9">
 		<!-- Subpage title start -->
 		<div class="page-banner-title">
       <div class="text-center">
-        <h2>{{ _('Call for volunteers') }}</h2>
+        <h1>{{ _('Call for volunteers') }}</h1>
       </div>
     </div><!-- Subpage title end -->
 	</div><!-- Page Banner end -->
