--- a/templates/sponsoring.html
+++ b/templates/sponsoring.html
@@ -1,11 +1,11 @@
 {% extends "body.html" %}
 {% block content %}
 
-  <div id="page-banner-area" class="page-banner-area" style="background-image:url({{ url_for('static', filename='images/banner/banner4.jpg') }})">
+  <div class="page-banner-area banner7">
 		<!-- Subpage title start -->
 		<div class="page-banner-title">
       <div class="text-center">
-        <h2>{{ _('Sponsors &amp; Partners') }}</h2>
+        <h1>{{ _('Sponsors &amp; Partners') }}</h1>
       </div>
     </div><!-- Subpage title end -->
 	</div><!-- Page Banner end -->
