--- a/templates/thanks.html
+++ b/templates/thanks.html
@@ -1,10 +1,10 @@
 {% extends "body.html" %}
 {% block content %}
-  <div id="page-banner-area" class="page-banner-area" style="background-image:url({{ url_for('static', filename='images/banner/banner2.jpg') }})">
+  <div class="page-banner-area banner2">
 		<!-- Subpage title start -->
 		<div class="page-banner-title">
         	<div class="text-center">
-	        	<h2>{{ _('Thank you') }}</h2>
+	        	<h1>{{ _('Thank you') }}</h1>
          </div>
       </div><!-- Subpage title end -->
 	</div><!-- Page Banner end -->
