reviewed text, updated translations and new static

--- a/templates/index.html
+++ b/templates/index.html
@@ -204,7 +204,7 @@
             </h5>
             <div class="card-body">
               <p>
-                {{ _('All of our staff members are volunteers. We are looking for a new members to join the team of organizers.') }}<br/>
+                {{ _('All of our staff members are volunteers. We are looking for new members to join the team of organizers.') }}<br/>
               </p>
             </div>
           </div>
